# Massey-Hacks-2024

./: .gitignore  README.md  create_tables.sql  pyproject.toml  wsgi.py
data/: cache.json
mh2024/: __init__.py  app.py  create_db.py  data.py
mh2024/auth/: __init__.py  auth.py  login.py
mh2024/blueprints/: __init__.py  auth.py  plan.py  user.py
mh2024/crud/: __init__.py  database.py  user.py
mh2024/static/: day.js  home.js  workout-search.js
mh2024/static/styles/: base.css  button.css  day.css  forms.css  home.css  homebar.css  homeinfo.css  navbar.css  style.css  useractivity.css  workout-search.css  workoutplans.css
mh2024/templates/: base.html  day.html  home.html  login.html  user_create.html  user_profile.html  workout-search.html  workoutplans.html
