[tool.poetry]
name = "mh2024"
version = "0.1.0"
description = ""
authors = ["Andrei <142443853+hjzres@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
passlib = { extras = ["argon2"], version = "^1.7.4" }
flask-login = "^0.6.3"
types-passlib = "^1.7.7.20240327"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
ruff = "^0.4.3"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F401"]


[[tool.mypy.overrides]]
module = "flask_login.*"
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
